--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <li> <a href="index.html">Medium</a> </li>
     <li> <a href="Easy/easy.html">Easy</a> </li>
   </ul>
-  <div id="game">
-    <div class="top-area">
+  <div id="medium_game">
+    <div class="medium_top_area">
       <h3 id="mines">40</h3>
       <button id="restart">:|</button>
       <h3 id="timer">000</h3>
