--- a/Hard/hard.html
+++ b/Hard/hard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Minesweeper</title>
-  <link href="style_hard.css" rel="stylesheet" type="text/css" />
+  <link href="../Medium/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="difficulty">Difficulty</div>
@@ -17,8 +17,8 @@
   </ul>
 
 
-  <div id="game">
-    <div class="top-area">
+  <div id="hard_game">
+    <div class="hard_top_area">
       <h3 id="mines">99</h3>
       <button id="restart">:|</button>
       <h3 id="timer">000</h3>
