--- a/Easy/easy.html
+++ b/Easy/easy.html
@@ -4,17 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Minesweeper</title>
-  <link href="style_easy.css" rel="stylesheet" type="text/css" />
+  <link href="../Medium/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="difficulty">Difficulty</div>
+
   <ul class="difficulty_options">
     <li> <a id="hard" href="../Hard/hard.html">Hard</a> </li>
     <li> <a href="../index.html">Medium</a> </li>
     <li> <a href="easy.html">Easy</a> </li>
+
   </ul>
-  <div id="game">
-    <div class="top-area">
+
+
+  <div id="easy_game">
+    <div class="easy_top_area">
       <h3 id="mines">10</h3>
       <button id="restart">:|</button>
       <h3 id="timer">000</h3>
@@ -22,6 +26,7 @@
     <div class="easy_grid_of_buttons">
     </div>
   </div>
+
   <script type="module" src="script_easy.js"></script>
 </body>
 </html>
